# keras-cv

./: .bazelrc  .flake8  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CALL_FOR_CONTRIBUTIONS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  WORKSPACE  api_gen.py  batch_fill_benchmark.py  conftest.py  demo.py  grid_mask_driver.py  makefile  package-lock.json  pip_build.py  pyproject.toml  requirements-common.txt  requirements-jax-cuda.txt  requirements-tensorflow-cuda.txt  requirements-torch-cuda.txt  requirements.txt  sam_testing.py  setup.cfg  setup.py  split_to_boxes.py
.cloudbuild/: Dockerfile  README.md  cloudbuild.yaml  unit_test_jobs.jsonnet
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.githooks/: pre-commit
.github/: API_DESIGN.md  CALL_FOR_CONTRIBUTIONS.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  ROADMAP.md  dependabot.yml
benchmarks/: vectorization_strategy_benchmark.py  vectorized_auto_contrast.py  vectorized_channel_shuffle.py  vectorized_crop_resize.py  vectorized_grayscale.py  vectorized_jittered_resize.py  vectorized_mosaic.py  vectorized_random_brightness.py  vectorized_random_color_jitter.py  vectorized_random_contrast.py  vectorized_random_crop.py  vectorized_random_flip.py  vectorized_random_hue.py  vectorized_random_rotation.py  vectorized_random_saturation.py  vectorized_random_sharpness.py  vectorized_random_shear.py  vectorized_random_translation.py  vectorized_random_zoom.py  vectorized_randomly_zoomed_crop.py  vectorized_solarization.py
build_deps/: build_pip_pkg.sh  configure.py  (+1 more)
keras_cv/: BUILD  (+10 more)
(+2019 files in other folders)
